@@ -5,6 +5,7 @@ Date: 00. 00. 0000
     -
   Changes:
     - Added dedicated buttons to move subfactories and recipe up and down, making the interaction more discoverable and easier to use
+    - Added a setting for those that want the 'add subfactory'-button to go to the product picker straight away
     - Reordered the subfactory list buttons to make more sense by grouping the archive-related ones
     - Added a ko-fi link to the preferences dialog
   Bugfixes:
